tests/error/ptr_assign_invalid.gw
#! [contains] can't assign to pointer
class C {}

class D extends C {}

var D d;
d :=> var Ptr:[int] pd;
